[tool.poetry]
name = "app"
version = "0.2.4"
description = ""
authors = ["KiraLT <certbot-lambda@kiralt.dev>"]
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "~3.9"
certbot = "^1.29.0"
boto3 = "^1.24.69"
certbot-dns-route53 = "^1.29.0"
certbot-dns-cloudflare = "^1.29.0"
certbot-dns-cloudxns = "^1.29.0"
certbot-dns-digitalocean = "^1.29.0"
certbot-dns-dnsimple = "^1.29.0"
certbot-dns-dnsmadeeasy = "^1.29.0"
certbot-dns-gehirn = "^1.29.0"
certbot-dns-google = "^1.29.0"
certbot-dns-linode = "^1.29.0"
certbot-dns-luadns = "^1.29.0"
certbot-dns-nsone = "^1.29.0"
certbot-dns-ovh = "^1.29.0"
certbot-dns-rfc2136 = "^1.29.0"
certbot-dns-sakuracloud = "^1.29.0"
python-dotenv = "^0.20.0"
python-slugify = "^6.1.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.2"
pex = "^2.1.102"
lambdex = "^0.1.6"
python-semantic-release = "^7.31.2"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
build = "rm -rf ./dist && task build-pex && task build-lambda"
build-pex = "pex . -o dist/certbot-lambda.zip"
build-lambda = "lambdex build -e app.handler:handler -M main.py dist/certbot-lambda.zip"
test = "pytest --cov=app --cov-report xml tests/"
dev = "python -c 'from app.handler import handler; handler(None, None)'"
prettify = "black ./app ./tests"
release = "semantic-release publish"

[tool.semantic_release]
version_variable = [
    "app/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
hvcs = "github"
upload_to_pypi = false
upload_to_release = true
build_command = "poetry run task build"
commit_subject = "Release {version} [skip ci]"
