[tool.poetry]
name = "app"
version = "0.4.0"
description = ""
authors = ["KiraLT <certbot-lambda@kiralt.dev>"]
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "~3.9"
certbot = "^2.1.0"
boto3 = "^1.26.52"
certbot-dns-route53 = "^2.1.0"
certbot-dns-cloudflare = "^2.1.0"
certbot-dns-cloudxns = "^1.32.0"
certbot-dns-digitalocean = "^2.1.0"
certbot-dns-dnsimple = "^2.1.0"
certbot-dns-dnsmadeeasy = "^2.1.0"
certbot-dns-gehirn = "^2.1.0"
certbot-dns-google = "^2.1.0"
certbot-dns-linode = "^2.1.0"
certbot-dns-luadns = "^2.1.0"
certbot-dns-nsone = "^2.1.0"
certbot-dns-ovh = "^2.1.0"
certbot-dns-rfc2136 = "^2.1.0"
certbot-dns-sakuracloud = "^2.1.0"
python-dotenv = "^0.21.0"
python-slugify = "^7.0.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.3"
pex = "^2.1.119"
lambdex = "^0.1.7"
python-semantic-release = "^7.32.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
build = "rm -rf ./dist && task build-pex && task build-lambda"
build-pex = "pex . -o dist/certbot-lambda.zip"
build-lambda = "lambdex build -e app.handler:handler -M main.py dist/certbot-lambda.zip"
test = "pytest --cov=app --cov-report xml tests/"
test-build = "task build && TESTMODE=true lambdex test --empty dist/certbot-lambda.zip"
run-build = "task build && lambdex test --empty dist/certbot-lambda.zip"
dev = "python -c 'from app.handler import handler; handler(None, None)'"
prettify = "black ./app ./tests"
release = "semantic-release publish"

[tool.semantic_release]
version_variable = [
    "app/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
hvcs = "github"
upload_to_pypi = false
upload_to_release = true
build_command = "poetry run task build"
commit_subject = "Release {version} [skip ci]"
