[tool.poetry]
name = "app"
version = "0.4.0"
description = ""
authors = ["KiraLT <certbot-lambda@kiralt.dev>"]
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "~3.11"
certbot = "^2.7.4"
boto3 = "^1.34.128"
certbot-dns-route53 = "^2.7.4"
certbot-dns-cloudflare = "^2.7.4"
certbot-dns-cloudxns = "^1.32.0"
certbot-dns-digitalocean = "^2.7.4"
certbot-dns-dnsimple = "^2.7.4"
certbot-dns-dnsmadeeasy = "^2.7.4"
certbot-dns-gehirn = "^2.7.4"
certbot-dns-google = "^2.7.4"
certbot-dns-linode = "^2.7.4"
certbot-dns-luadns = "^2.7.4"
certbot-dns-nsone = "^2.7.4"
certbot-dns-ovh = "^2.7.4"
certbot-dns-rfc2136 = "^2.7.4"
certbot-dns-sakuracloud = "^2.7.4"
python-dotenv = "^1.0.1"
python-slugify = "^8.0.4"

[tool.poetry.dev-dependencies]
taskipy = "^1.13.0"
pex = "^2.1.148"
lambdex = "^0.1.7"
python-semantic-release = "^9.8.3"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
build = "rm -rf ./dist && task build-pex && task build-lambda"
build-pex = "pex . --complete-platform complete-platform.json -o dist/certbot-lambda.zip"
build-lambda = "lambdex build -e app.handler:handler -M main.py dist/certbot-lambda.zip"
test = "pytest --cov=app --cov-report xml tests/"
test-build = "task build && TESTMODE=true lambdex test --empty dist/certbot-lambda.zip"
run-build = "task build && lambdex test --empty dist/certbot-lambda.zip"
dev = "python -c 'from app.handler import handler; handler(None, None)'"
prettify = "black ./app ./tests"
release = "semantic-release publish"

[tool.semantic_release]
version_variable = [
    "app/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
hvcs = "github"
upload_to_pypi = false
upload_to_release = true
build_command = "poetry run task build"
commit_subject = "Release {version} [skip ci]"
